--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,7 @@
 			"command": "/usr/bin/g++-13",
 			"args": [
 				"-fdiagnostics-color=always",
+				"-std=c++20",
 				"-g",
 				"${file}",
 				"-o",
