--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,11 +3,11 @@
 	"tasks": [
 		{
 			"type": "cppbuild",
-			"label": "C/C++: g++-13 build active file",
-			"command": "/usr/bin/g++-13",
+			"label": "C/C++: g++",
+			"command": "/usr/bin/g++",
 			"args": [
 				"-fdiagnostics-color=always",
-				"-std=c++20",
+				"-std=c++23",
 				"-g",
 				"${file}",
 				"-o",
@@ -20,13 +20,13 @@
 				"$gcc"
 			],
 			"group": "build",
-			"detail": "compiler: /usr/bin/g++-13"
+			"detail": "compiler: /usr/bin/g++"
 		},
 		{
 			"type": "shell",
 			"label": "run program",
 			"command":"${fileDirname}/build/${fileBasenameNoExtension}",
-			"dependsOn": "C/C++: g++-13 build active file"
+			"dependsOn": "C/C++: g++"
 
 		}
 	]
